--- a/final_simulation/model_evaluation.ipynb
+++ b/final_simulation/model_evaluation.ipynb
@@ -26,40 +26,272 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from final_simulation._env.real_intersection import RealIntersectionSimpleObs13, RealIntersectionSimpleObs13_Static\n",
+    "from final_simulation._sumo.simplest_intersection_simulation import SignalStates, SumoSimulationSimpleObs\n",
+    "from final_simulation.sarsa import SARSA_Eval\n",
+    "from stable_baselines3 import DQN, PPO, A2C\n",
+    "import os\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Final Models Eval\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sim time 1 minute\n",
+    "n_episodes = 3\n",
+    "max_simulation_seconds = 300\n",
+    "\n",
+    "simulation = SumoSimulationSimpleObs(\n",
+    "    sumo_binary_path=\"C:\\\\Program Files (x86)\\\\Eclipse\\\\Sumo\\\\bin\\\\sumo\",\n",
+    "    #sumo_binary_path=\"C:\\\\Program Files (x86)\\\\Eclipse\\\\Sumo\\\\bin\\\\sumo-gui\",\n",
+    "    sumo_config_path=\"C:\\\\sumoconfig\\\\real_intersection.sumocfg\",\n",
+    "    signal_states=SignalStates\n",
+    ")\n",
+    "\n",
+    "env = RealIntersectionSimpleObs13(\n",
+    "    simulation=simulation,\n",
+    "    max_simulation_seconds=max_simulation_seconds\n",
+    ")\n",
+    "\n",
+    "env_static = RealIntersectionSimpleObs13_Static(\n",
+    "    simulation=simulation,\n",
+    "    max_simulation_seconds=max_simulation_seconds\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PPO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = PPO.load(\"final_simulation\\\\_models\\\\reward_13\\\\simple\\\\ppo\\\\best_model.zip\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for episode in range(1,n_episodes + 1):\n",
+    "\n",
+    "    print(\"Episode: \", episode)\n",
+    "\n",
+    "    observation = env.reset()\n",
+    "    done = False\n",
+    "\n",
+    "    while done != True:\n",
+    "        \n",
+    "        action, _states = model.predict(observation)\n",
+    "        observation, reward, done, info = env.step(float(action))\n",
+    "\n",
+    "        if done:\n",
+    "            env.save_metrics(\n",
+    "                episode=episode,\n",
+    "                model_name=\"PPO\",\n",
+    "                log_dir=\"final_simulation\\\\_models\\\\eval\"\n",
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DQN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = DQN.load(\"final_simulation\\\\_models\\\\reward_13\\\\simple\\\\dqn\\\\best_model.zip\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for episode in range(1,n_episodes + 1):\n",
+    "\n",
+    "    print(\"Episode: \", episode)\n",
+    "\n",
+    "    observation = env.reset()\n",
+    "    done = False\n",
+    "\n",
+    "    while done != True:\n",
+    "        \n",
+    "        action, _states = model.predict(observation)\n",
+    "        observation, reward, done, info = env.step(float(action))\n",
+    "\n",
+    "        if done:\n",
+    "            env.save_metrics(\n",
+    "                episode=episode,\n",
+    "                model_name=\"DQN\",\n",
+    "                log_dir=\"final_simulation\\\\_models\\\\eval\"\n",
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A2C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = A2C.load(\"final_simulation\\\\_models\\\\reward_13\\\\simple\\\\a2c\\\\best_model.zip\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for episode in range(1,n_episodes + 1):\n",
+    "\n",
+    "    print(\"Episode: \", episode)\n",
+    "\n",
+    "    observation = env.reset()\n",
+    "    done = False\n",
+    "\n",
+    "    while done != True:\n",
+    "        \n",
+    "        action, _states = model.predict(observation)\n",
+    "        observation, reward, done, info = env.step(float(action))\n",
+    "\n",
+    "        if done:\n",
+    "            env.save_metrics(\n",
+    "                episode=episode,\n",
+    "                model_name=\"A2C\",\n",
+    "                log_dir=\"final_simulation\\\\_models\\\\eval\"\n",
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SARSA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = SARSA_Eval(\n",
+    "    q_table_path=\"final_simulation\\\\_models\\\\reward_13\\\\simple\\\\sarsa\\\\final_q_table.npy\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Zen of Python, by Tim Peters\n",
-      "\n",
-      "Beautiful is better than ugly.\n",
-      "Explicit is better than implicit.\n",
-      "Simple is better than complex.\n",
-      "Complex is better than complicated.\n",
-      "Flat is better than nested.\n",
-      "Sparse is better than dense.\n",
-      "Readability counts.\n",
-      "Special cases aren't special enough to break the rules.\n",
-      "Although practicality beats purity.\n",
-      "Errors should never pass silently.\n",
-      "Unless explicitly silenced.\n",
-      "In the face of ambiguity, refuse the temptation to guess.\n",
-      "There should be one-- and preferably only one --obvious way to do it.\n",
-      "Although that way may not be obvious at first unless you're Dutch.\n",
-      "Now is better than never.\n",
-      "Although never is often better than *right* now.\n",
-      "If the implementation is hard to explain, it's a bad idea.\n",
-      "If the implementation is easy to explain, it may be a good idea.\n",
-      "Namespaces are one honking great idea -- let's do more of those!\n"
+      "Episode:  1\n",
+      "No simulation running.\n",
+      "saving observation file..\n",
+      "Episode:  2\n",
+      "No simulation running.\n"
      ]
     }
    ],
    "source": [
-    "from final_simulation._env.simplest_intersection import SimplestIntersection\n",
-    "from final_simulation._sumo.simplest_intersection_simulation import SignalStates, SumoSimulation\n",
-    "from stable_baselines3 import DQN, PPO, A2C\n",
-    "import os"
+    "for episode in range(1,n_episodes + 1):\n",
+    "\n",
+    "    print(\"Episode: \", episode)\n",
+    "\n",
+    "    observation = env.reset()\n",
+    "    done = False\n",
+    "\n",
+    "    while done != True:\n",
+    "        \n",
+    "        action = model.predict(observation)\n",
+    "        observation, reward, done, info = env.step(float(action))\n",
+    "\n",
+    "        if done:\n",
+    "            env.save_metrics(\n",
+    "                episode=episode,\n",
+    "                model_name=\"SARSA\",\n",
+    "                log_dir=\"final_simulation\\\\_models\\\\eval\"\n",
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Static"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for episode in range(1,n_episodes + 1):\n",
+    "\n",
+    "    print(\"Episode: \", episode)\n",
+    "\n",
+    "    observation = env_static.reset()\n",
+    "    done = False\n",
+    "\n",
+    "    while done != True:\n",
+    "\n",
+    "        observation, reward, done, info = env_static.step(0)\n",
+    "\n",
+    "        if done:\n",
+    "            env_static.save_metrics(\n",
+    "                episode=episode,\n",
+    "                model_name=\"STATIC\",\n",
+    "                log_dir=\"final_simulation\\\\_models\\\\eval\"\n",
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Old\n",
+    "---"
    ]
   },
   {
@@ -347,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,30 +622,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No simulation running.\n",
-      "saving observation file..\n",
-      "info: {'traffic':        stopped_cars\n",
-      "entry              \n",
-      "east              1\n",
-      "north             4\n",
-      "south             1\n",
-      "west             15, 'signal_state': 2, 'previous_signal_state': 2, 'previous_signal_active_time': 6, 'simulation_time': 180.0, 'reward': -21.0}\n",
-      "\n",
-      "            Total Time Steps: 180\n",
-      "            Total Signal Changes: 29\n",
-      "            Total Throughput: 83\n",
-      "            Total Reward: -1775.0\n",
-      "            \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "observation = env.reset()\n",
     "\n",
